Updated prediction calculations and messages and the README.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/math.min.js"></script>
     <script type="text/javascript" src="scripts/materialize.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+    <script src="scripts/keras.min.js"></script>
     <link href="styles/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
@@ -34,7 +35,7 @@
 
         <div class="row right-align">
             <div class="col s4 offset-s8">
-                <a href="https://github.com/nasanos/WhichShroom/blob/master/README.md">About</a><br/>               
+                <a href="https://github.com/nasanos/WhichShroom/blob/master/README.md">About</a><br/>
                 <a class="modal-trigger" href="#disclaimer_modal">Disclaimer</a><br/>
             </div>
         </div>
@@ -43,7 +44,7 @@
             <div class="col s4 offset-s8" id="page_footer">
                 &copy; Nasanos, 2019
             </div>
-        </div>        
+        </div>
 
         <div id="disclaimer_modal" class="modal">
             <div class="modal-content">
@@ -63,3 +64,4 @@
     <script type="text/javascript" src="scripts/input.js"></script>
 </body>
 </html>
+
